free courses link

--- a/_posts/2018-12-11-mylinks.md
+++ b/_posts/2018-12-11-mylinks.md
@@ -4,9 +4,7 @@ title: My Links
 tags: [link]
 ---
 
-Important link
-
-Free courses links - 
+Free courses - 
 
 [Practical Reinforcement Learning] (https://github.com/yandexdataschool/Practical_RL)
 
