Updated link list

--- a/_posts/2018-12-11-mylinks.md
+++ b/_posts/2018-12-11-mylinks.md
@@ -11,3 +11,11 @@ Free courses -
 [numerical-linear-algebra](https://github.com/fastai/numerical-linear-algebra)
 
 [From Language to Information](https://web.stanford.edu/class/cs124/)
+
+[YSDA Natural Language Processing course](https://github.com/yandexdataschool/nlp_course)
+
+[Deep Learning for Coders](https://course.fast.ai/ml)
+
+[MIT Introduction to Deep Learning](http://introtodeeplearning.com/)
+
+[Google Machine Learning Crash Course](https://developers.google.com/machine-learning/crash-course/)
